[package]
name = "trouble-nrf-sdc-examples"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
embassy-executor = { version = "0.9", default-features = false, features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-time = { version = "0.5", default-features = false, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.7", default-features = false, features = ["defmt", "time-driver-rtc1", "gpiote", "unstable-pac", "rt"] }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.7", features = ["defmt"] }

futures = { version = "0.3", default-features = false, features = ["async-await"]}
nrf-sdc = { version = "0.4", default-features = false, features = ["defmt", "peripheral", "central"] }
nrf-mpsl = { version = "0.3", default-features = false, features = ["defmt", "critical-section-impl"] }
bt-hci = { version = "0.6", default-features = false, features = ["defmt"] }
trouble-host = { path = "../../host", features = ["derive", "scan"] }
trouble-example-apps = { version = "0.1.0", path = "../apps", features = ["defmt"] }

defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
rand = { version = "0.8.5", default-features = false }
static_cell = "2"
rand_core = { version = "0.6"}
rand_chacha = { version = "0.3", default-features = false }

[profile.release]
debug = 2

[patch.crates-io]
#embassy-executor = {path = "../../../embassy/embassy-executor"}
#embassy-sync = {path = "../../../embassy/embassy-sync"}
#embassy-futures = {path = "../../../embassy/embassy-futures"}
#embassy-time = {path = "../../../embassy/embassy-time"}
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "1bc7380cd5d7a031f37511b69da13fc6caded816"}
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "1bc7380cd5d7a031f37511b69da13fc6caded816"}
#bt-hci = { git = "https://github.com/embassy-rs/bt-hci.git", rev = "83a9e179ff019ed60abb73705f54383f89fc60fc" }

[features]
nrf52832 = [
    "embassy-nrf/nrf52832",
    "nrf-sdc/nrf52832",
]
nrf52833 = [
    "embassy-nrf/nrf52833",
    "nrf-sdc/nrf52833",
]
nrf52840 = [
    "embassy-nrf/nrf52840",
    "nrf-sdc/nrf52840",
]
security = [
    "trouble-example-apps/security",
]

[[bin]]
name = "ble_bas_central_sec"
required-features = ["security"]

[[bin]]
name = "ble_bas_peripheral_sec"
required-features = ["security"]

[[bin]]
name = "ble_bas_peripheral_auth"
required-features = ["security"]

[[bin]]
name = "ble_bas_central_auth"
required-features = ["security"]

[[bin]]
name = "ble_bas_peripheral_pass_key"
required-features = ["security"]

[[bin]]
name = "ble_bas_central_pass_key"
required-features = ["security"]

[[bin]]
name = "ble_bas_central_bonding"
required-features = ["security", "nrf52840"]

[[bin]]
name = "ble_bas_peripheral_bonding"
required-features = ["security", "nrf52840"]
