[package]
name = "trouble-nrf52-examples"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
embassy-executor = { version = "0.9", default-features = false, features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-time = { version = "0.5", default-features = false, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.9", default-features = false, features = ["defmt", "time-driver-rtc1", "gpiote", "unstable-pac", "rt"] }

nrf-sdc = { version = "0.4", default-features = false, features = ["defmt", "peripheral", "central"] }
nrf-mpsl = { version = "0.3", default-features = false, features = ["defmt", "critical-section-impl"] } # critical-section-impl needed
trouble-host = { path = "../../host", features = ["derive", "scan", "gatt"] }
trouble-example-apps = { version = "0.1.0", path = "../apps", features = ["defmt"] }

defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
rand = { version = "0.10.0", default-features = false, features = ["chacha"], optional = true }
static_cell = "2"

[profile.release]
debug = 2

[patch.crates-io]
embassy-executor = {git = "https://github.com/embassy-rs/embassy.git", rev="729f96b9521d6705c1d664f4e9c636155d440519"}
embassy-nrf = {git = "https://github.com/embassy-rs/embassy.git", rev="729f96b9521d6705c1d664f4e9c636155d440519"}
embassy-sync = {git = "https://github.com/embassy-rs/embassy.git", rev="729f96b9521d6705c1d664f4e9c636155d440519"}
embassy-futures = {git = "https://github.com/embassy-rs/embassy.git", rev="729f96b9521d6705c1d664f4e9c636155d440519"}
embassy-time = {git = "https://github.com/embassy-rs/embassy.git", rev="729f96b9521d6705c1d664f4e9c636155d440519"}
embassy-time-driver = {git = "https://github.com/embassy-rs/embassy.git", rev="729f96b9521d6705c1d664f4e9c636155d440519"}
embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy.git", rev="729f96b9521d6705c1d664f4e9c636155d440519"}
#nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "36816b8ca6a30776886fad289921adf49ca54fee"}
#nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "36816b8ca6a30776886fad289921adf49ca54fee"}
nrf-sdc = { path = "../../sub/nrf-sdc/nrf-sdc" }
nrf-mpsl = { path = "../../sub/nrf-sdc/nrf-mpsl" }

[features]
nrf52832 = [
    "embassy-nrf/nrf52832",
    "nrf-sdc/nrf52832",
]
nrf52833 = [
    "embassy-nrf/nrf52833",
    "nrf-sdc/nrf52833",
]
nrf52840 = [
    "embassy-nrf/nrf52840",
    "nrf-sdc/nrf52840",
]
security = [
    "trouble-example-apps/security",
    "dep:rand",
]

[[bin]]
name = "ble_bas_central_sec"
required-features = ["security"]

[[bin]]
name = "ble_bas_peripheral_sec"
required-features = ["security"]

[[bin]]
name = "ble_bas_peripheral_auth"
required-features = ["security"]

[[bin]]
name = "ble_bas_central_auth"
required-features = ["security"]

[[bin]]
name = "ble_bas_peripheral_pass_key"
required-features = ["security"]

[[bin]]
name = "ble_bas_central_pass_key"
required-features = ["security"]

[[bin]]
name = "ble_bas_central_bonding"
required-features = ["security", "nrf52840"]

[[bin]]
name = "ble_bas_peripheral_bonding"
required-features = ["security", "nrf52840"]
